# LoomWM

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  TODO.md  deny.toml
.github/workflows/: ci.yml  security.yml
crates/loom-ai/: Cargo.toml
crates/loom-ai/src/: generator.rs  intent.rs  lib.rs  suggestions.rs
crates/loom-canvas/: Cargo.toml
crates/loom-canvas/src/: canvas.rs  connection.rs  lib.rs  node.rs  viewport.rs
crates/loom-config/: Cargo.toml
crates/loom-config/src/: config.rs  keybindings.rs  lib.rs  theme.rs
crates/loom-core/: Cargo.toml
crates/loom-core/src/: backend.rs  compositor.rs  input.rs  lib.rs  perf.rs  security.rs  state.rs  types.rs
crates/loom-core/src/backend/: drm.rs  mod.rs  winit.rs
crates/loom-core/src/handlers/: compositor.rs  mod.rs  output.rs  seat.rs  shm.rs  xdg_shell.rs
crates/loom-core/src/input/: keybindings.rs  mod.rs
crates/loom-protocol/: Cargo.toml
crates/loom-protocol/src/: lib.rs  node_protocol.rs
docs/: ROADMAP.md  TODO.md
src/: main.rs
