[package]
name = "loom-config"
description = "Configuration management for LoomWM"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Serialization
serde.workspace = true
toml.workspace = true

# Utils
tracing.workspace = true
thiserror.workspace = true

# Paths
dirs = "6"
